# SDOM

./: .buildinfo  .gitignore  Consolidated_plots.py  Developers_guide.md  OneNodePowerSystemOptimization_v1(for review).gms  Plots.py  README.md  SDOM.gms  SDOM.gsp  SDOM_pyomo.py  SDOM_pyomo_cbc.py  SDOM_pyomo_cbc_28Oct.py  SDOM_pyomo_glpk_10Oct.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  resilience_scenarios.ipynb  sdom_Developers_guide.html  sdom_publications.html  search.html  searchindex.js  solver_log.txt
.doctrees/: index.doctree  sdom_Developers_guide.doctree  sdom_publications.doctree
.doctrees/user_guide/: exploring_model.doctree  inputs.doctree  introduction.doctree  running_and_outputs.doctree  sdom_math_formulation.doctree
.github/workflows/: docs.yml  test.yaml
Data/: scalars.csv
Data/exchange_hydro_budget_multiple_balancing/: Data_BalancingUnits_2025.csv  Data_Balancing_units_2025.csv  StorageData_2025.csv  formulations.csv  lahy_hourly_2025.csv  lahy_max_hourly_2025.csv  lahy_min_hourly_2025.csv  scalars.csv
Data/exchange_hydro_budget_multiple_balancing p95/: formulations.csv
Data/exchange_hydro_daily_budget_multiple_balancing p95/: formulations.csv
Data/exchange_hydro_daily_budget_multiple_balancing_p95/: scalars.csv
Data/no_exchange_hydro_daily_budget_multiple_balancing_p95/: StorageData_2025.csv  formulations.csv
Data/no_exchange_monthly_hydro_budget_multiple_balancing_p50/: formulations.csv
Data/no_exchange_run_of_river/: Data_BalancingUnits_2030(in).csv  StorageData_2050.csv  formulations.csv
Data/test/: CFSolar_2030.csv  CFWind_2030.csv  CapSolar_2030.csv  CapWind_2030.csv  (+9 more)
Docs/: COMMANDS.md  README.md  sdom_Developers_guide.md  sdom_Exploring_pyomo_model_example.md  sdom_Inputs.md  sdom_example_simple.md
GAMS_CBC/: OutputGeneration_SDOM_CBC_Nuclear_1_Target_1.00_.csv  OutputSelectedVRE_SDOM_CBC_Nuclear_1_Target_1.00_.csv  OutputStorage_SDOM_CBC_Nuclear_1_Target_1.00_.csv  OutputSummary_SDOM_CBC_Nuclear_1_Target_1.00_.csv  SDOM_CBC.gms  SDOM_CBC.gsp  SDOM_CBC_NewConstraints.gms  SDOM_results.gdx
Python_CBC/: OutputGeneration_CAISO_Nuclear_0_Target_0.7.csv  OutputGeneration_CAISO_Nuclear_1_Target_0.7.csv  OutputGeneration_CAISO_Nuclear_1_Target_1.00.csv  OutputStorage_CAISO_Nuclear_0_Target_0.7.csv  OutputStorage_CAISO_Nuclear_1_Target_0.7.csv  OutputStorage_CAISO_Nuclear_1_Target_1.00.csv  OutputSummary_CAISO_Nuclear_0_Target_0.7.csv  OutputSummary_CAISO_Nuclear_1_Target_0.7.csv  OutputSummary_CAISO_Nuclear_1_Target_1.00.csv  SDOM_pyomo_cbc_010825.py  SDOM_pyomo_cbc_012325.py  SDOM_pyomo_cbc_021925.py  SDOM_pyomo_cbc_122324.py  SDOM_pyomo_cbc_18Nov.py  resilience_scenarios.py  solver_log.txt
_modules/: index.html
_sources/: sdom_publications.md.txt
api/: core.html  index.html  io_manager.html  models.html  results.html  utilities.html
docs/: COMMANDS.md  requirements.txt
src/: io_manager.py
tests/: constants_test.py  test_docs_build.py  test_input_data.py  test_input_data_hydro_budget.py  test_input_data_hydro_budget_imports_exports.py  test_no_resiliency_hydro_budget_optimization_cases.py  test_no_resiliency_imp_exp_hydro_budget_optimization_cases.py  test_no_resiliency_optimization_cases.py  test_optimization_cases.py  test_output_data.py  test_resiliency_optimization_cases.py  utils_tests.py
user_guide/: exploring_model.html  inputs.html  introduction.html  running_and_outputs.html  sdom_math_formulation.html
(+118 files in other folders)
